Removes the extra margin bottom on the UHP section of the index page. [Fixes #100]

--- a/_scss/components/unique-hiring-paths.scss
+++ b/_scss/components/unique-hiring-paths.scss
@@ -24,10 +24,6 @@ $body-padding: $size-M;
     @include clearfix();
     padding: $size-M;
     background-color: $color-white;
-
-    @include media($ML) {
-      margin-bottom: $size-XL;
-    }
   }
 
   &__title {
